--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
                   {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
                   {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
                   {% if forloop.first %}
-                    <li><a href="#year_{{this_year}}">{{this_year}}</a>
+                    <li><a href="#year_{{this_year}}">{{this_year}}  Year</a>
                       <ul class="nav">
                         <li><a href="#month_{{this_year}}_{{this_month}}">{{this_month}}</a></li>
                   {% endif %}
