--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
                   {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
                   {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
                   {% if forloop.first %}
-                    <li><a href="#year_{{this_year}}">{{this_year}}  Year</a>
+                    <li><a href="#year_{{this_year}}">{{this_year}} 년</a>
                       <ul class="nav">
                         <li><a href="#month_{{this_year}}_{{this_month}}">{{this_month}}</a></li>
                   {% endif %}
@@ -26,7 +26,7 @@ layout: default
                     {% if this_year != next_year %}
                         </ul>
                       </li>
-                      <li><a href="#year_{{next_year}}">{{next_year}}</a>
+                      <li><a href="#year_{{next_year}}">{{next_year}} 년</a>
                         <ul class="nav">
                           <li><a href="#month_{{next_year}}_{{next_month}}">{{next_month}}</a></li>
                     {% else %}    
