--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,1 +1,41 @@
+---
+layout: default
+title: Resume
+header: Posts By Resume
+---
 
+<div class="container docs-container">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="sidebar hidden-print" role="complementary">
+        <div id="navigation">
+        	<h1>Tags</h1>
+      		<ul class="nav sidenav">
+				{% if site.categories.first[0] == null %}
+					{% for category in site.categories %} 
+				    	<li><a href="#{{ category }}-ref">
+				    		{{ category | join: "/" }} <span style="color: #999999;" >({{ site.categories[category].size }})</span>
+				    	</a></li>
+			    	{% endfor %}
+			  	{% else %}
+			    	{% for category in site.categories %} 
+				    	<li><a href="#{{ category[0] }}-ref">
+				    		{{ category[0] | join: "/" }} <span style="color: #999999;" >({{ category[1].size }})</span>
+				    	</a></li>
+			    	{% endfor %}
+			  	{% endif %}
+          	</ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-9" role="main">
+      <div class="panel docs-content">
+        <div class="wrapper">
+          <div class="home">
+          This is Resume Page
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
